--- a/examples/browser.html
+++ b/examples/browser.html
@@ -343,8 +343,9 @@ function animate(timestamp, frame) {
       const distance = raycaster.ray.origin.distanceTo(intersectionPoint);
 
       if (xFactor > 0 && xFactor <= 0.99 && yFactor > 0 && yFactor <= 0.99 && distance < 3) {
-        const x = xFactor * planeWidth;
-        const y = (yFactor * planeHeight)/3; // SCROLL_SCALE in libmlservo
+        const SCROLL_SCALE = 3; // constant in libmlservo
+        const x = (xFactor * planeWidth)/SCROLL_SCALE;
+        const y = (yFactor * planeHeight)/SCROLL_SCALE;
 
         controllerCoords[i][0] = x;
         controllerCoords[i][1] = y;
