--- a/examples/browser.html
+++ b/examples/browser.html
@@ -94,9 +94,9 @@ function init() {
     console.log(source + ':' + line + ': ' + message);
   };
   document.body.appendChild(iframe);
-  /* setTimeout(() => {
-    iframe.src = 'https://gmail.com/';
-  }, 2000); */
+  setTimeout(() => {
+    iframe.src = 'http://text.com/';
+  }, 2000);
 
   planeMesh = (() => {
     const geometry = new THREE.PlaneBufferGeometry(planeWorldWidth, planeWorldHeight)
