--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -986,37 +986,57 @@ function animate(time, frame) {
               const y = yFactor * menuHeight;
 
               if (y < urlBarOffset*2) {
-                intersectionPoints.push(intersectionPoint.clone());
-                intersectionCbs.push(() => {
-                  controllerMesh.rayMesh.scale.z = distance;
-                  controllerMesh.updateMatrixWorld();
+                if (x < menuWidth*0.8) {
+                  intersectionPoints.push(intersectionPoint.clone());
+                  intersectionCbs.push(() => {
+                    controllerMesh.rayMesh.scale.z = distance;
+                    controllerMesh.updateMatrixWorld();
 
-                  controllerMesh.rayDot.position.z = -distance;
-                  controllerMesh.updateMatrixWorld();
-                  controllerMesh.rayDot.visible = true;
+                    controllerMesh.rayDot.position.z = -distance;
+                    controllerMesh.updateMatrixWorld();
+                    controllerMesh.rayDot.visible = true;
 
-                  const gamepads = navigator.getGamepads();
-                  const gamepad = gamepads[i];
-                  if (gamepad.buttons[1].pressed) {
-                    const textX = x - cursorWidth;
-                    let closestIndex = -1;
-                    let closestDistance = Infinity;
-                    for (let i = 0; i < menuMesh.urlMesh.urlState.measures.length; i++) {
-                      const urlMeasure = menuMesh.urlMesh.urlState.measures[i];
-                      const distance = Math.abs(urlMeasure - textX);
-                      if (distance < closestDistance) {
-                        closestIndex = i;
-                        closestDistance = distance;
+                    const gamepads = navigator.getGamepads();
+                    const gamepad = gamepads[i];
+                    if (gamepad.buttons[1].pressed) {
+                      const textX = x - cursorWidth;
+                      let closestIndex = -1;
+                      let closestDistance = Infinity;
+                      for (let i = 0; i < menuMesh.urlMesh.urlState.measures.length; i++) {
+                        const urlMeasure = menuMesh.urlMesh.urlState.measures[i];
+                        const distance = Math.abs(urlMeasure - textX);
+                        if (distance < closestDistance) {
+                          closestIndex = i;
+                          closestDistance = distance;
+                        }
+                      }
+                      if (closestIndex !== -1) {
+                        menuMesh.urlMesh.urlState.cursor = closestIndex;
+                        menuMesh.urlMesh.updateText();
                       }
                     }
-                    if (closestIndex !== -1) {
-                      menuMesh.urlMesh.urlState.cursor = closestIndex;
-                      menuMesh.urlMesh.updateText();
-                    }
-                  }
 
-                  intersectionSpecs[i] = null;
-                });
+                    intersectionSpecs[i] = null;
+                  });
+                } else {
+                  intersectionPoints.push(intersectionPoint.clone());
+                  intersectionCbs.push(() => {
+                    controllerMesh.rayMesh.scale.z = distance;
+                    controllerMesh.updateMatrixWorld();
+
+                    controllerMesh.rayDot.position.z = -distance;
+                    controllerMesh.updateMatrixWorld();
+                    controllerMesh.rayDot.visible = true;
+
+                    const gamepads = navigator.getGamepads();
+                    const gamepad = gamepads[i];
+                    if (gamepad.buttons[1].pressed) {
+                      _closeRig(rig);
+                    }
+
+                    intersectionSpecs[i] = null;
+                  });
+                }
               }
             }
           }
