Change default reality tabs url to http://lol.com

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -44,7 +44,7 @@ function parseQuery(queryString) {
 }
 const query = parseQuery(window.location.search);
 const FLOOR_SIZE = 20;
-const DEFAULT_URL = 'http://google.com';
+const DEFAULT_URL = 'http://lol.com';
 
 // load
 
