--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -8,6 +8,12 @@
     <script>
 let display, fakeDisplay, tabs = [], lastPresseds = [false, false];
 
+const links = [
+  {
+    name: 'Minimap',
+    url: 'minimap_ml.html',
+  },
+];
 const RAY_COLOR = 0x44c2ff;
 const RAY_HIGHLIGHT_COLOR = new THREE.Color(RAY_COLOR).multiplyScalar(0.5).getHex();
 const rayDistance = 1;
@@ -402,16 +408,17 @@ const _makeRig = () => {
       mesh.urlState = urlState;
 
       const _updateText = () => {
-        // console.log('update text', urlState.text, urlState.cursor);
-
         ctx.fillStyle = '#EEE';
-        ctx.fillRect(0, 0, menuWidth*0.8 - 5, menuHeight);
-        ctx.fillRect(menuWidth*0.8, 0, menuWidth, menuHeight);
+        ctx.fillRect(0, 0, menuWidth*0.6 - 5, menuHeight);
+        ctx.fillRect(menuWidth*0.6, 0, menuWidth*0.2 - 5, menuHeight);
+        ctx.fillRect(menuWidth*0.8, 0, menuWidth*0.2 - 5, menuHeight);
         ctx.fillRect(0, menuHeight, menuWidth*0.5, menuHeight);
 
         ctx.fillStyle = '#000';
         ctx.font = `${fontSize}px Arial`;
+
         ctx.fillText(urlState.text, 10, urlBarHeight - 10*2 - 10);
+        ctx.fillText('c', menuWidth*0.68, menuHeight*0.7);
         ctx.fillText('x', menuWidth*0.88, menuHeight*0.7);
 
         urlState.measures.length = 0;
@@ -490,19 +497,34 @@ const _makeRig = () => {
       mesh.updateMatrixWorld();
       mesh.frustumCulled = false;
       mesh.d = 3;
+      mesh.list = 'tabs';
 
       const _updateOptions = () => {
-        ctx.fillStyle = mesh.d === 3 ? '#42a5f5' : '#EEE';
-        ctx.fillRect(0, 0, menuHeight*2, menuHeight);
-        ctx.fillStyle = mesh.d === 3 ? '#FFF' : '#000';
         ctx.font = `${fontSize}px Arial`;
-        ctx.fillText('3D', menuHeight - 30, menuHeight/2 + 20);
 
+        // 3D
+        ctx.fillStyle = mesh.d === 3 ? '#42a5f5' : '#EEE';
+        ctx.fillRect(0, 0, menuWidth*0.2 - 5, menuHeight);
+        ctx.fillStyle = mesh.d === 3 ? '#FFF' : '#000';
+        ctx.fillText('3D', menuWidth*0.2/2 - 30, menuHeight/2 + 20);
+
+        // 2D
         ctx.fillStyle = mesh.d === 2 ? '#42a5f5' : '#EEE';
-        ctx.fillRect(menuHeight*2 + 10, 0, menuHeight*2, menuHeight);
+        ctx.fillRect(menuWidth*0.2, 0, menuWidth*0.2 - 5, menuHeight);
         ctx.fillStyle = mesh.d === 2 ? '#FFF' : '#000';
-        ctx.font = `${fontSize}px Arial`;
-        ctx.fillText('2D', menuHeight*3 - 30, menuHeight/2 + 20);
+        ctx.fillText('2D', menuWidth*0.2 + menuWidth*0.2/2 - 30, menuHeight/2 + 20);
+
+        // Tabs
+        ctx.fillStyle = mesh.list === 'tabs' ? '#42a5f5' : '#EEE';
+        ctx.fillRect(menuWidth*0.4, 0, menuWidth*0.2 - 5, menuHeight);
+        ctx.fillStyle = mesh.list === 'tabs' ? '#FFF' : '#000';
+        ctx.fillText('Tabs', menuWidth*0.4 + menuWidth*0.2/2 - 70, menuHeight/2 + 20);
+
+        // Links
+        ctx.fillStyle = mesh.list === 'links' ? '#42a5f5' : '#EEE';
+        ctx.fillRect(menuWidth*0.6, 0, menuWidth*0.2 - 5, menuHeight);
+        ctx.fillStyle = mesh.list === 'links' ? '#FFF' : '#000';
+        ctx.fillText('Links', menuWidth*0.6 + menuWidth*0.2/2 - 70, menuHeight/2 + 20);
 
         texture.needsUpdate = true;
       };
@@ -539,7 +561,7 @@ const _makeRig = () => {
     object.add(optionsMesh);
     object.optionsMesh = optionsMesh;
 
-    const tabsMesh = (() => {
+    const listMesh = (() => {
       const canvas = document.createElement('canvas');
       canvas.width = menuWidth;
       canvas.height = menuHeight*4;
@@ -569,28 +591,51 @@ const _makeRig = () => {
       mesh.updateMatrixWorld();
       mesh.frustumCulled = false;
 
-      const _updateTabs = () => {
+      const _updateList = () => {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-        for (let i = 0; i < tabs.length; i++) {
-          const tab = tabs[i];
-          const {url} = tab;
-          const y = menuHeight*i;
+        ctx.font = `${fontSize}px Arial`;
 
-          ctx.fillStyle = '#FFFFFF';
-          ctx.fillRect(0, y, menuWidth*0.8-10, menuHeight);
-          ctx.fillRect(menuWidth*0.8, y, menuHeight*3, menuHeight);
+        if (optionsMesh.list === 'tabs') {
+          if (tabs.length > 0) {
+            for (let i = 0; i < tabs.length; i++) {
+              const tab = tabs[i];
+              const {url} = tab;
+              const y = menuHeight*i;
 
-          ctx.font = `${fontSize}px Arial`;
-          ctx.fillStyle = '#000000';
-          ctx.fillText(url, menuHeight - 30, y + menuHeight/2 + 20);
-          ctx.fillText('x', menuWidth*0.88, y + menuHeight*0.7);
+              ctx.fillStyle = '#FFFFFF';
+              ctx.fillRect(0, y, menuWidth*0.8-10, menuHeight);
+              ctx.fillRect(menuWidth*0.8, y, menuHeight*3, menuHeight);
+
+              ctx.fillStyle = '#000000';
+              ctx.fillText(url, 50, y + menuHeight/2 + 20);
+              ctx.fillText('x', menuWidth*0.88, y + menuHeight*0.7);
+            }
+          } else {
+            ctx.fillStyle = '#000000';
+            ctx.fillRect(0, 0, menuWidth*0.3 - 5, menuHeight);
+
+            ctx.fillStyle = '#FFFFFF';
+            ctx.fillText('No tabs', 50, menuHeight/2 + 20);
+          }
+        } else if (optionsMesh.list === 'links') {
+          for (let i = 0; i < links.length; i++) {
+            const link = links[i];
+            const {name} = link;
+            const y = menuHeight*i;
+
+            ctx.fillStyle = '#FFFFFF';
+            ctx.fillRect(0, y, menuWidth, menuHeight);
+
+            ctx.fillStyle = '#000000';
+            ctx.fillText(name, 50, y + menuHeight/2 + 20);
+          }
         }
 
         texture.needsUpdate = true;
       };
-      _updateTabs();
-      mesh.updateTabs = _updateTabs;
+      _updateList();
+      mesh.updateList = _updateList;
 
       mesh.plane = new THREE.Plane();
       mesh.leftLine = new THREE.Line3();
@@ -619,8 +664,8 @@ const _makeRig = () => {
 
       return mesh;
     })();
-    object.add(tabsMesh);
-    object.tabsMesh = tabsMesh;
+    object.add(listMesh);
+    object.listMesh = listMesh;
 
     return object;
   })();
@@ -979,7 +1024,7 @@ function animate(time, frame) {
         keyboardMesh.update();
         menuMesh.urlMesh.update();
         menuMesh.optionsMesh.update();
-        menuMesh.tabsMesh.update();
+        menuMesh.listMesh.update();
 
         // keyboard
         {
@@ -1161,13 +1206,21 @@ function animate(time, frame) {
                   const gamepads = navigator.getGamepads();
                   const gamepad = gamepads[i];
                   if (gamepad.buttons[1].pressed) {
-                    const optionX = Math.floor(x/(menuHeight*2+10));
+                    const optionX = Math.floor(x/(menuWidth*0.2));
                     if (optionX === 0) {
                       menuMesh.optionsMesh.d = 3;
                       menuMesh.optionsMesh.updateOptions();
                     } else if (optionX === 1) {
                       menuMesh.optionsMesh.d = 2;
                       menuMesh.optionsMesh.updateOptions();
+                    } else if (optionX === 2) {
+                      menuMesh.optionsMesh.list = 'tabs';
+                      menuMesh.optionsMesh.updateOptions();
+                      menuMesh.listMesh.updateList();
+                    } else if (optionX === 3) {
+                      menuMesh.optionsMesh.list = 'links';
+                      menuMesh.optionsMesh.updateOptions();
+                      menuMesh.listMesh.updateList();
                     }
                   }
 
@@ -1178,49 +1231,80 @@ function animate(time, frame) {
           }
         }
 
-        // tabs mesh
+        // list mesh
         {
-          const intersectionPoint = menuMesh.visible ? controllerMesh.ray.intersectPlane(menuMesh.tabsMesh.plane, localVector) : null;
+          const intersectionPoint = menuMesh.visible ? controllerMesh.ray.intersectPlane(menuMesh.listMesh.plane, localVector) : null;
           if (intersectionPoint) {
-            const leftIntersectionPoint = menuMesh.tabsMesh.leftLine.closestPointToPoint(intersectionPoint, true, localVector2);
+            const leftIntersectionPoint = menuMesh.listMesh.leftLine.closestPointToPoint(intersectionPoint, true, localVector2);
 
-            const topIntersectionPoint = menuMesh.tabsMesh.topLine.closestPointToPoint(intersectionPoint, true, localVector3);
+            const topIntersectionPoint = menuMesh.listMesh.topLine.closestPointToPoint(intersectionPoint, true, localVector3);
 
-            const xFactor = topIntersectionPoint.distanceTo(menuMesh.tabsMesh.topLine.start) / menuWorldWidth;
-            const yFactor = leftIntersectionPoint.distanceTo(menuMesh.tabsMesh.leftLine.start) / (menuWorldHeight*4);
+            const xFactor = topIntersectionPoint.distanceTo(menuMesh.listMesh.topLine.start) / menuWorldWidth;
+            const yFactor = leftIntersectionPoint.distanceTo(menuMesh.listMesh.leftLine.start) / (menuWorldHeight*4);
             const distance = controllerMesh.ray.origin.distanceTo(intersectionPoint);
 
             if (xFactor > 0 && xFactor <= 0.99 && yFactor > 0 && yFactor <= 0.99 && distance < rayDistance) {
               const x = xFactor * menuWidth;
               const y = yFactor * menuHeight*4;
 
-              for (let j = 0; j < tabs.length; j++) {
-                if (x >= menuWidth*0.8 && y >= urlBarOffset*j && y < urlBarOffset*(j+1)) {
-                  intersectionPoints.push(intersectionPoint.clone());
-                  intersectionCbs.push(() => {
-                    controllerMesh.rayMesh.scale.z = distance;
-                    controllerMesh.updateMatrixWorld();
+              if (menuMesh.optionsMesh.list === 'tabs') {
+                for (let j = 0; j < tabs.length; j++) {
+                  if (x >= menuWidth*0.8 && y >= urlBarOffset*j && y < urlBarOffset*(j+1)) {
+                    intersectionPoints.push(intersectionPoint.clone());
+                    intersectionCbs.push(() => {
+                      controllerMesh.rayMesh.scale.z = distance;
+                      controllerMesh.updateMatrixWorld();
 
-                    controllerMesh.rayDot.position.z = -distance;
-                    controllerMesh.updateMatrixWorld();
-                    controllerMesh.rayDot.visible = true;
+                      controllerMesh.rayDot.position.z = -distance;
+                      controllerMesh.updateMatrixWorld();
+                      controllerMesh.rayDot.visible = true;
 
-                    const gamepads = navigator.getGamepads();
-                    const gamepad = gamepads[i];
-                    const pressed = gamepad.buttons[1].pressed;
-                    const lastPressed = lastPresseds[i];
-                    if (pressed && !lastPressed) {
-                      const [tab] = tabs.splice(j, 1);
-                      const {iframe} = tab;
-                      _closeUrl(iframe);
+                      const gamepads = navigator.getGamepads();
+                      const gamepad = gamepads[i];
+                      const pressed = gamepad.buttons[1].pressed;
+                      const lastPressed = lastPresseds[i];
+                      if (pressed && !lastPressed) {
+                        const [tab] = tabs.splice(j, 1);
+                        const {iframe} = tab;
+                        _closeUrl(iframe);
 
-                      menuMesh.tabsMesh.updateTabs();
-                    }
+                        menuMesh.listMesh.updateList();
+                      }
 
-                    intersectionSpecs[i] = null;
-                  });
+                      intersectionSpecs[i] = null;
+                    });
 
-                  break;
+                    break;
+                  }
+                }
+              } else if (menuMesh.optionsMesh.list === 'links') {
+                for (let j = 0; j < links.length; j++) {
+                  if (y >= urlBarOffset*j && y < urlBarOffset*(j+1)) {
+                    intersectionPoints.push(intersectionPoint.clone());
+                    intersectionCbs.push(() => {
+                      controllerMesh.rayMesh.scale.z = distance;
+                      controllerMesh.updateMatrixWorld();
+
+                      controllerMesh.rayDot.position.z = -distance;
+                      controllerMesh.updateMatrixWorld();
+                      controllerMesh.rayDot.visible = true;
+
+                      const gamepads = navigator.getGamepads();
+                      const gamepad = gamepads[i];
+                      const pressed = gamepad.buttons[1].pressed;
+                      const lastPressed = lastPresseds[i];
+                      if (pressed && !lastPressed) {
+                        const link = links[j];
+                        const {url} = link;
+
+                        _openUrl(url, rig.position, rig.quaternion, undefined, menuMesh.optionsMesh.d);
+                      }
+
+                      intersectionSpecs[i] = null;
+                    });
+
+                    break;
+                  }
                 }
               }
             }
