Small minimap.html cleanup

--- a/examples/minimap_ml.html
+++ b/examples/minimap_ml.html
@@ -13,7 +13,7 @@
     let intersectScene, intersectCamera, renderTarget, terrainMeshes;
     let mesher = null;
 
-    const controllerGeometry = new THREE.BoxBufferGeometry(0.1, 0.2, 0.01);
+    /* const controllerGeometry = new THREE.BoxBufferGeometry(0.1, 0.2, 0.01);
     const controllerMaterial = new THREE.MeshPhongMaterial({
       color: 0x4caf50,
     });
@@ -27,7 +27,7 @@
       mesh.matrixAutoUpdate = false;
       mesh.frustumCulled = false;
       return mesh;
-    };
+    }; */
 
     function init() {
       container = document.createElement('div');
